# logger

./: CMakeLists.txt  README.md  flake.nix  package.nix
example/: CMakeLists.txt  module1.c
examples/simple/: CMakeLists.txt  main.c  module1.h  module2.c  module2.h  module3.c
include/: CMakeLists.txt
include/logger/: logger.h  logger_backend.h  logger_common.h
src/: CMakeLists.txt  loggerPrinter.c  loggerPrinter.h  logger_backend.c  numberPrinter.c  numberPrinter.h
tools/: trie_generator.py
